--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -203,12 +203,12 @@ h1
       <div class="team-front">
         <img src='https://i.postimg.cc/BXzPrXxg/purbayan2.jpg'>
       <h3>Purbayan Majumder</h3>
-      <p>Web Designer</p>
+      <p>Exploit Developer and Data Scientist</p>
       </div>
       
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to work in the field of Cyber-security and Data Science
         </span>
         </div>
       
@@ -297,7 +297,7 @@ h1
       <div class="team-front">
         <a href='https://postimg.cc/w1cy7FCW' target='_blank'><img src='https://i.postimg.cc/w1cy7FCW/sadique3.jpg' border='0' alt='sadique3'/></a>
       <h3>Sadique Akhtar</h3>
-      <p>Hacker</p>
+      <p>Web Developer</p>
       </div>
       <div class="team-back">
         <span>
