--- a/polls/templates/upload.html
+++ b/polls/templates/upload.html
@@ -205,12 +205,12 @@ h1
         <div class="team-front">
           <img src='https://i.postimg.cc/BXzPrXxg/purbayan2.jpg'>
         <h3>Purbayan Majumder</h3>
-        <p>Web Designer</p>
+        <p>Exploit Developer and Data Scientist</p>
         </div>
         
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to work in the fields of Cyber Security and Data Science
           </span>
           </div>
         
