--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -203,12 +203,12 @@ h1
       <div class="team-front">
         <img src='https://i.postimg.cc/BXzPrXxg/purbayan2.jpg'>
       <h3>Purbayan Majumder</h3>
-      <p>Exploit Developer and Data Scientist</p>
+      <p>Cyber Security Analyst and Data Scientist</p>
       </div>
       
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to work in the field of Cyber-security and Data Science
+        Hello There , I'm Purbayan Majumder an Information Technology student at Asansol Engineering College. Looking forward to work in the field of Cyber-security and Data Science
         </span>
         </div>
       
@@ -227,7 +227,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello There , I'm Aman Khan an Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
         </span>
         </div>
       </div>
@@ -245,7 +245,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello There , I'm Rubina Das an Information Technology student at Asansol Engineering College looking forward to work in the field of Machine Learning
         </span>
         </div>
       </div>
@@ -283,7 +283,7 @@ h1
       
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello There , I'm Ujjwal Kumar  a 3rd year student Pursuing my Btech in the Branch of Information Technolog I am a good problem solver along with that a Machine learning enthusiast working on different Projects based on ML algorithms.
         </span>
         </div>
       </div>
