--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -227,7 +227,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello There , I'm Aman Khan an Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello there , I'm a Information Technology at Asansol Engineering College , intrested in data science , football and cooking .
         </span>
         </div>
       </div>
@@ -278,7 +278,7 @@ h1
       <div class="team-front">
         <a href='https://postimg.cc/DSMVdK3m' target='_blank'><img src='https://i.postimg.cc/DSMVdK3m/ujjwal2.jpg' border='0' alt='ujjwal2'/></a>
       <h3>Ujjwal Kumar</h3>
-      <p>Senior Software Engineer</p>
+      <p>Software Engineer</p>
       </div>
       
       <div class="team-back">
@@ -301,7 +301,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello there , I'm a Information Technology at Asansol Engineering College , intrested in designing web pages , football and cooking
         </span>
         </div>
     
