--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -227,7 +227,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello there , I'm a Information Technology at Asansol Engineering College , intrested in data science , football and cooking .
+        Hello there , I'm an IT Student at Asansol Engineering College , intrested in data science , football and cooking .
         </span>
         </div>
       </div>
@@ -301,7 +301,7 @@ h1
       </div>
       <div class="team-back">
         <span>
-        Hello there , I'm a Information Technology at Asansol Engineering College , intrested in designing web pages , football and cooking
+        Hello there , I'm an IT Student at Asansol Engineering College , intrested in designing web pages , football and cooking
         </span>
         </div>
     
