--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -239,7 +239,7 @@ h1
       <div class="our-team-main">
       
       <div class="team-front">
-        <a href='https://postimg.cc/JDdBRnfM' target='_blank'><img src='https://i.postimg.cc/JDdBRnfM/rubina.jpg' border='0' alt='rubina'/></a>
+        <img src='https://i.postimg.cc/JDdBRnfM/rubina.jpg'>
       <h3>Rubina Das</h3>
       <p>Competetive Coder</p>
       </div>
@@ -257,7 +257,7 @@ h1
       <div class="our-team-main">
       
       <div class="team-front">
-        <a href='https://postimg.cc/64fJd2BN' target='_blank'><img src='https://i.postimg.cc/64fJd2BN/jaya.png' border='0' alt='jaya'/></a>
+        <img src='https://i.postimg.cc/64fJd2BN/jaya.png'>
       <h3>Jaya Gupta</h3>
       <p>Full Stack Developer</p>
       </div>
@@ -276,7 +276,7 @@ h1
       <div class="our-team-main">
       
       <div class="team-front">
-        <a href='https://postimg.cc/DSMVdK3m' target='_blank'><img src='https://i.postimg.cc/DSMVdK3m/ujjwal2.jpg' border='0' alt='ujjwal2'/></a>
+        <img src='https://i.postimg.cc/DSMVdK3m/ujjwal2.jpg'>
       <h3>Ujjwal Kumar</h3>
       <p>Software Engineer</p>
       </div>
@@ -295,7 +295,7 @@ h1
       <div class="our-team-main">
       
       <div class="team-front">
-        <a href='https://postimg.cc/w1cy7FCW' target='_blank'><img src='https://i.postimg.cc/w1cy7FCW/sadique3.jpg' border='0' alt='sadique3'/></a>
+        <img src='https://i.postimg.cc/w1cy7FCW/sadique3.jpg'>
       <h3>Sadique Akhtar</h3>
       <p>Web Developer</p>
       </div>
