--- a/polls/templates/upload.html
+++ b/polls/templates/upload.html
@@ -205,12 +205,12 @@ h1
         <div class="team-front">
           <img src='https://i.postimg.cc/BXzPrXxg/purbayan2.jpg'>
         <h3>Purbayan Majumder</h3>
-        <p>Exploit Developer and Data Scientist</p>
+        <p>Cyber Security Analyst and Data Scientist</p>
         </div>
         
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to work in the fields of Cyber Security and Data Science
+          Hello There , I'm Purbayan Majumder an Information Technology student at Asansol Engineering College. Looking forward to work in the field of Cyber-security and Data Science
           </span>
           </div>
         
@@ -229,7 +229,7 @@ h1
         </div>
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+         Hello there , I'm an IT Student at Asansol Engineering College , intrested in data science , football and cooking .
           </span>
           </div>
         </div>
@@ -241,13 +241,13 @@ h1
         <div class="our-team-main">
         
         <div class="team-front">
-          <a href='https://postimg.cc/JDdBRnfM' target='_blank'><img src='https://i.postimg.cc/JDdBRnfM/rubina.jpg' border='0' alt='rubina'/></a>
+         <img src='https://i.postimg.cc/JDdBRnfM/rubina.jpg'>
         <h3>Rubina Das</h3>
         <p>Competetive Coder</p>
         </div>
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+          Hello There , I'm Rubina Das an Information Technology student at Asansol Engineering College looking forward to work in the field of Machine Learning
           </span>
           </div>
         </div>
@@ -259,7 +259,7 @@ h1
         <div class="our-team-main">
         
         <div class="team-front">
-          <a href='https://postimg.cc/64fJd2BN' target='_blank'><img src='https://i.postimg.cc/64fJd2BN/jaya.png' border='0' alt='jaya'/></a>
+          <img src='https://i.postimg.cc/64fJd2BN/jaya.png'>
         <h3>Jaya Gupta</h3>
         <p>Full Stack Developer</p>
         </div>
@@ -278,14 +278,14 @@ h1
         <div class="our-team-main">
         
         <div class="team-front">
-          <a href='https://postimg.cc/DSMVdK3m' target='_blank'><img src='https://i.postimg.cc/DSMVdK3m/ujjwal2.jpg' border='0' alt='ujjwal2'/></a>
+          <img src='https://i.postimg.cc/DSMVdK3m/ujjwal2.jpg'>
         <h3>Ujjwal Kumar</h3>
-        <p>Senior Software Engineer</p>
+        <p>Software Engineer</p>
         </div>
         
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+        Hello There , I'm Ujjwal Kumar  a 3rd year student Pursuing my Btech in the Branch of Information Technolog I am a good problem solver along with that a Machine learning enthusiast working on different Projects based on ML algorithms.          
           </span>
           </div>
         </div>
@@ -297,13 +297,13 @@ h1
         <div class="our-team-main">
         
         <div class="team-front">
-          <a href='https://postimg.cc/w1cy7FCW' target='_blank'><img src='https://i.postimg.cc/w1cy7FCW/sadique3.jpg' border='0' alt='sadique3'/></a>
+          <img src='https://i.postimg.cc/w1cy7FCW/sadique3.jpg'>
         <h3>Sadique Akhtar</h3>
-        <p>Hacker</p>
+        <p>Web Developer</p>
         </div>
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+          Hello there , I'm an IT Student at Asansol Engineering College , intrested in designing web pages , football and cooking
           </span>
           </div>
       
