--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -283,7 +283,7 @@ h1
       
       <div class="team-back">
         <span>
-        Hello There , I'm Ujjwal Kumar  a 3rd year student Pursuing my Btech in the Branch of Information Technolog I am a good problem solver along with that a Machine learning enthusiast working on different Projects based on ML algorithms.
+        Hello There , I'm Ujjwal Kumar  a 3rd year student Pursuing my Btech in the Branch of Information Technology I am a good problem solver along with that a Machine learning enthusiast working on different Projects based on ML algorithms.
         </span>
         </div>
       </div>
