--- a/polls/templates/upload.html
+++ b/polls/templates/upload.html
@@ -265,7 +265,7 @@ h1
         </div>
         <div class="team-back">
           <span>
-          Hello There , I'm a Information Technology student at Asansol Engineering College. Looking forward to get placed in Google !
+          Jaya Gupta, a software engineering student in Asansol Engineering college .
           </span>
           </div>
         
